--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -20,7 +20,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: boa-dev/criterion-compare-action@v3.2.4
         with:
-          # Optional. Compare only this package
+          branchName: "master"
           package: "nargo_cli"
-          # Optional. Compare only this benchmark target
           benchName: "criterion"
