--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -18,6 +18,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - uses: Swatinem/rust-cache@v2
+        with:
+          key: x86_64-unknown-linux-gnu
+          save-if: false
+
       - uses: boa-dev/criterion-compare-action@v3.2.4
         with:
           branchName: "master"
