chore: restrict CI to execution benches

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -28,4 +28,4 @@ jobs:
         with:
           branchName: "master"
           package: "nargo_cli"
-          benchName: "criterion"
+          benchName: "execution"
