--- a/tooling/nargo_cli/Cargo.toml
+++ b/tooling/nargo_cli/Cargo.toml
@@ -83,7 +83,11 @@ iai = "0.1.1"
 test-binary = "3.0.2"
 
 [[bench]]
-name = "criterion"
+name = "execution"
+harness = false
+
+[[bench]]
+name = "proof_generation"
 harness = false
 
 [features]
