--- a/compiler/noirc_frontend/Cargo.toml
+++ b/compiler/noirc_frontend/Cargo.toml
@@ -26,6 +26,8 @@ tracing.workspace = true
 petgraph = "0.6"
 
 [dev-dependencies]
+base64.workspace = true
+reqwest = { version = "0.12.0", features = ["blocking"] }
 strum = "0.24"
 strum_macros = "0.24"
 tempfile.workspace = true
