--- a/.github/Cross.toml
+++ b/.github/Cross.toml
@@ -2,7 +2,7 @@
 passthrough = [
     "HOME",
     "RUST_BACKTRACE",
-    "BARRETENBERG_BIN_DIR"
+    "BARRETENBERG_BIN_DIR",
     "BLNS_JSON_DIR"
 ]
 volumes = [
