--- a/.github/Cross.toml
+++ b/.github/Cross.toml
@@ -3,7 +3,7 @@ passthrough = [
     "HOME",
     "RUST_BACKTRACE",
     "BARRETENBERG_BIN_DIR",
-    "BLNS_JSON_DIR"
+    "BLNS_JSON_PATH"
 ]
 volumes = [
     "HOME",
