--- a/acvm-repo/acvm_js/Cargo.toml
+++ b/acvm-repo/acvm_js/Cargo.toml
@@ -17,6 +17,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 cfg-if = "1.0.0"
+futures = "0.3.30"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 acvm.workspace = true
