--- a/acvm-repo/bn254_blackbox_solver/Cargo.toml
+++ b/acvm-repo/bn254_blackbox_solver/Cargo.toml
@@ -17,6 +17,7 @@ acir.workspace = true
 acvm_blackbox_solver.workspace = true
 thiserror.workspace = true
 num-traits.workspace = true
+cfg-if = "1.0.0"
 
 rust-embed = { version = "6.6.0", features = [
     "debug-embed",
