--- a/acvm-repo/acvm_js/Cargo.toml
+++ b/acvm-repo/acvm_js/Cargo.toml
@@ -22,11 +22,11 @@ wasm-bindgen.workspace = true
 wasm-bindgen-futures.workspace = true
 console_error_panic_hook.workspace = true
 gloo-utils.workspace = true
-js-sys.workspace = true 
+js-sys.workspace = true
+serde.workspace = true
 tracing-subscriber.workspace = true
 tracing-web.workspace = true
 
-serde = { version = "1.0.136", features = ["derive"] }
 const-str = "0.5.5"
 
 [build-dependencies]
