--- a/docs/package.json
+++ b/docs/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "preprocess": "yarn workspace @noir-lang/acvm_js build && ./scripts/codegen_nargo_reference.sh && yarn node ./scripts/preprocess/index.js",
     "start": "yarn preprocess && docusaurus start",
-    "build": "yarn preprocess && yarn version::stables && docusaurus build",
+    "build": "yarn preprocess && docusaurus build",
     "version::stables": "ts-node ./scripts/setStable.ts",
     "serve": "serve build",
-    "version": "yarn preprocess && docusaurus build && docusaurus docs:version"
+    "version": "yarn build && docusaurus docs:version"
   },
   "dependencies": {
     "@docusaurus/core": "^3.0.1",
