--- a/docs/package.json
+++ b/docs/package.json
@@ -9,7 +9,7 @@
     "clean": "rm -rf ./processed-docs ./processed-docs ./build",
     "version::stables": "ts-node ./scripts/setStable.ts",
     "serve": "serve build",
-    "version": "yarn build && docusaurus docs:version"
+    "version": "yarn version::stables && ./scripts/cut_version.sh"
   },
   "dependencies": {
     "@docusaurus/core": "^3.0.1",
