wip, make feature flag 'serde' for (de)serialize impl's, replace json test case saving with printing for testing feature flag

--- a/tooling/nargo/Cargo.toml
+++ b/tooling/nargo/Cargo.toml
@@ -36,3 +36,6 @@ jsonrpc-http-server = "18.0"
 jsonrpc-core-client = "18.0"
 jsonrpc-derive = "18.0"
 jsonrpc-core = "18.0"
+
+[features]
+serde = []
