fix: hotfix submodule cache

--- a/.github/ci-setup-action/action.yml
+++ b/.github/ci-setup-action/action.yml
@@ -15,7 +15,7 @@ runs:
       uses: actions/cache@v3
       with:
         path: .git/modules
-        key: submodules-${{ hashFiles('.gitmodules') }}
+        key: submodules-${{ hashFiles('.gitmodules') }}-spot-ebs
 
     - name: Checkout Submodules
       shell: bash
