fix(hotfix): CI ignore git safe.directory checks (#5659)

--- a/.github/ci-setup-action/action.yml
+++ b/.github/ci-setup-action/action.yml
@@ -10,6 +10,14 @@ runs:
   # define an action, runs in OS of caller
   using: composite
   steps:
+    # Since we use multiple runners, dont want them clashing
+    - name: Generate Unique Home Directory
+      shell: bash
+      run: |
+        RUN_HOME=~/run-$RANDOM-$(date +%s)
+        echo HOME=$RUN_HOME >> $GITHUB_ENV
+        mkdir -p $RUN_HOME
+
     - name: Cache Submodules
       id: cache-submodules
       uses: actions/cache@v3
@@ -19,15 +27,9 @@ runs:
 
     - name: Checkout Submodules
       shell: bash
-      run: git submodule sync --recursive && git submodule update --init --recursive
-
-    # Since we use multiple runners, dont want them clashing
-    - name: Generate Unique Home Directory
-      shell: bash
       run: |
-        RUN_HOME=~/run-$RANDOM-$(date +%s)
-        echo HOME=$RUN_HOME >> $GITHUB_ENV
-        mkdir -p $RUN_HOME
+        git config --global --add safe.directory '*'
+        git submodule sync --recursive && git submodule update --init --recursive
 
     # TODO reconsider how jq gets into image
     - name: Setup jq
