--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
     with:
       runner_label: ${{ github.actor }}-x86
       ebs_cache_size_gb: 128
-      runner_concurrency: 8
-      ec2_instance_type: r6g.32xlarge
+      runner_concurrency: 50
+      ec2_instance_type: m6a.32xlarge
       ec2_ami_id: ami-0d8a9b0419ddb331a
       ec2_instance_ttl: 40 # refreshed by jobs
     secrets: inherit
@@ -122,7 +122,7 @@ jobs:
       runner_label: ${{ github.actor }}-bench-x86
       ebs_cache_size_gb: 32
       runner_concurrency: 1
-      ec2_instance_type: r6g.4xlarge
+      ec2_instance_type: m6a.4xlarge
       ec2_ami_id: ami-0d8a9b0419ddb331a
       ec2_instance_ttl: 15 # refreshed by jobs
     secrets: inherit
