Initial code for PLONKY2 backend
The new directories test_programs/plonky2_prove_{failure,success}
contain tests that exercise `nargo prove --use-plonky2-backend-experimental`.

The flag triggers a new execution path in
`noirc_driver::compile_no_check` which builds a Plonky2Circuit object
and adds it to the compilation result. `prove_cmd::run` then checks the
flag again and calls `prove` on this object, instead of calling the
brillig binary.

At the moment, only the Mul operation is supported, as indicated by the
passing test. More operations will be added in the following commits.

Some PLONKY2 tests may not pass at this commit. Fixed in later commits.

--- a/compiler/noirc_evaluator/Cargo.toml
+++ b/compiler/noirc_evaluator/Cargo.toml
@@ -11,6 +11,7 @@ license.workspace = true
 [dependencies]
 noirc_frontend.workspace = true
 noirc_errors.workspace = true
+noirc_abi.workspace = true
 acvm.workspace = true
 fxhash.workspace = true
 iter-extended.workspace = true
@@ -18,5 +19,7 @@ thiserror.workspace = true
 num-bigint = "0.4"
 im.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 tracing.workspace = true
 chrono = "0.4.37"
+plonky2 = "0.2.1"
