--- a/compiler/noirc_frontend/Cargo.toml
+++ b/compiler/noirc_frontend/Cargo.toml
@@ -17,6 +17,7 @@ iter-extended.workspace = true
 chumsky.workspace = true
 thiserror.workspace = true
 smol_str.workspace = true
+im.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 rustc-hash = "1.1.0"
