--- a/.github/workflows/ci-arm.yml
+++ b/.github/workflows/ci-arm.yml
@@ -57,4 +57,4 @@ jobs:
       - name: Test
         working-directory: ./yarn-project/end-to-end/
         timeout-minutes: 15
-        run: earthly -P --no-output +e2e-tests --e2e_mode=cache
+        run: earthly -P --no-output +e2e-browser --e2e_mode=cache
