--- a/acvm-repo/bn254_blackbox_solver/Cargo.toml
+++ b/acvm-repo/bn254_blackbox_solver/Cargo.toml
@@ -39,6 +39,18 @@ js-sys.workspace = true
 getrandom.workspace = true
 wasmer = "4.2.6"
 
+[dev-dependencies]
+criterion = "0.5.0"
+pprof = { version = "0.12", features = [
+    "flamegraph",
+    "frame-pointer",
+    "criterion",
+] }
+
+[[bench]]
+name = "criterion"
+harness = false
+
 [features]
 default = ["bn254"]
 bn254 = ["acir/bn254"]
