fix(ci): don't fail if can't prune
hotfix

--- a/.github/workflows/setup-runner.yml
+++ b/.github/workflows/setup-runner.yml
@@ -108,7 +108,7 @@ jobs:
 
       - name: Run Docker Prune
         # helps to not overuse space
-        run: docker system prune -f
+        run: docker system prune -f || true
 
       - name: Run Earthly Bootstrap
         run: earthly bootstrap
