--- a/acvm-repo/acvm/Cargo.toml
+++ b/acvm-repo/acvm/Cargo.toml
@@ -40,3 +40,9 @@ bls12_381 = [
 rand = "0.8.5"
 proptest = "1.2.0"
 paste = "1.0.14"
+criterion.workspace = true
+pprof.workspace = true
+
+[[bench]]
+name = "criterion"
+harness = false
