--- a/.github/workflows/test-rust-workspace-msrv.yml
+++ b/.github/workflows/test-rust-workspace-msrv.yml
@@ -113,6 +113,7 @@ jobs:
           FAIL: ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') || contains(needs.*.result, 'skipped') }}
     
       - name: Checkout
+        if: ${{ failure() }}
         uses: actions/checkout@v4
 
       # Raise an issue if the tests failed
