--- a/test_programs/execution_success/fold_numeric_generic_poseidon/Nargo.toml
+++ b/test_programs/execution_success/fold_numeric_generic_poseidon/Nargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fold_numeric_generic"
+name = "fold_numeric_generic_poseidon"
 type = "bin"
 authors = [""]
 compiler_version = ">=0.27.0"
