--- a/tooling/nargo_cli/Cargo.toml
+++ b/tooling/nargo_cli/Cargo.toml
@@ -5,6 +5,7 @@ default-run = "nargo"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
+rust-version.workspace = true
 license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,7 +16,6 @@ name = "nargo"
 path = "src/main.rs"
 
 [build-dependencies]
-rustc_version = "0.4.0"
 build-data.workspace = true
 toml.workspace = true
 
