SHA256: copy from DendrETH
This commit copies a PLONKY2 implementation of SHA256 into the Noir
codebase. It also hooks calls to the std::hash::sha256 intrinsic to
result in evaluation of the SHA256 circuit.

--- a/compiler/noirc_evaluator/Cargo.toml
+++ b/compiler/noirc_evaluator/Cargo.toml
@@ -22,4 +22,5 @@ serde.workspace = true
 serde_json.workspace = true
 tracing.workspace = true
 chrono = "0.4.37"
-plonky2 = "0.2.1"
+plonky2 = { git = "https://github.com/metacraft-labs/plonky2" }
+plonky2_u32 = { git = "https://github.com/metacraft-labs/plonky2-u32" }
